--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
-page-home {
-
+ion-content {
+  .scroll-content {
+    background: url('../assets/imgs/cat.png') center/cover no-repeat;
+    .item-background {
+      background-color: transparent;
+    }
+    ion-item {
+      .color {
+        color: #fff;
+      }
+    }
+  }
 }
